--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     },
     "gear-builder": {
       "category": "utility",
-      "image": "chop.flywheel.io/d3b-copy-proc-2-acq:0.0.1-1"
+      "image": "chop.flywheel.io/d3b-copy-proc-2-acq:0.1.0"
     }
   },
   "environment": {
@@ -38,5 +38,5 @@
   "maintainer": "D3b-TIRU <flywheel@d3b.center>",
   "name": "d3b-copy-proc-2-acq",
   "source": "https://github.com/d3b-center/fw-copy-proc-2-acq", 
-  "version": "0.0.1-1"
+  "version": "0.1.0"
 }
